add rank change

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -84,13 +84,14 @@
         <img src="assets/img/Ajux_loader.gif" class="loading">
         <div id="leaderboard-holder" class="row">
           <p id="lastupdated"></p>
-          <table id="leaderboard" class="table table-dark leaderboard">
+          <table id="leaderboard" class="table table-dark leaderboard table-responsive">
             <thead>
               <th>Rank</th>
               <th>Name</th>
               <th>Rating</th>
               <th># of Battles</th>
               <th>Win %</th>
+              <th>Rank Change</th>
             </thead>
           </table>
         </div>
