add battle link

--- a/details.html
+++ b/details.html
@@ -131,6 +131,10 @@
                                 <td class="info-table-dl">Worst score against</td>
                                 <td class="info-table-d" id="worst-score"></td>
                             </tr>
+                            <tr class="info-table-r">
+                                <td class="info-table-dl">Battles</td>
+                                <td class="info-table-d ext-link" id="battles"></td>
+                            </tr>
                         </table>
                     </div>
                 </div>
