--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -260,8 +260,8 @@
                         <i class="fa fa-trophy"></i>
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pjr5fz" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pjr5fz" target="_blank">Alison Brie<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pjr5fz" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top round-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pjr5fz" target="_blank">Alison Brie<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
