--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               <li><a href="https://celebbattles.github.io/tournaments/latenightlegs">Late Night Legs</a></li>
               <li><a href="https://celebbattles.github.io/tournaments/wc2021">Celeb World Cup 2021</a></li>
               <li><a href="https://celebbattles.github.io/tournaments/underrated">Hottest Underrated Celeb</a></li>
+              <li><a href="https://celebbattles.github.io/tournaments/yogapants">Best Butt in Yoga Pants</a></li>
             </ul>
           </li>
         </ul>
