--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -78,7 +78,7 @@
         <section class="breadcrumbs">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>Best Butt in Yoga</h2>
+                    <h2>Best Butt in Yoga Pants</h2>
                     <div>
                         <input id="search" class="search-bar" autocomplete="off" placeholder="Search">
                         <ul id="result" class="search-list"></ul>
