--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -175,10 +175,10 @@
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);">Alice Eve<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Alice Eve<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="javascript:void(0);">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
