--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -154,7 +154,7 @@
                             <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r0f95l" target="_blank">Kelly Brook<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="tam team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r0f9ed" target="_blank">Kate Upton<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r0f9ed" target="_blank">Kate Upton<span class="score">&nbsp;</span></a></li>
                             <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r0f9ed" target="_blank">Natalie Portman<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
