--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -298,28 +298,28 @@
                             <li class="team team-top name-details"><a href="javascript:void(0);">Emily Blunt<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);">Katharine McPhee<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Katharine McPhee<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="javascript:void(0);">Shantel VanSanten<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);">Joey King<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Joey King<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Brec Bassinger<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                        </ul>
-                        <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Nina Dobrev<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Margot Robbie<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                        </ul>
+                        <ul class="matchup">
+                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND TWO -->
@@ -361,20 +361,20 @@
                         </ul>
                         <p class="group-details">Group G</p>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0i1" target="_blank">Emma Roberts<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0i1" target="_blank">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0ct" target="_blank">Brec Bassinger<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0ct" target="_blank">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0f6" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0f6" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0l5" target="_blank">Anne Hathaway<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/r8q0l5" target="_blank">Margot Robbie<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <p class="group-details">Group H</p>
                         <ul class="matchup">
